Fix jumps in composite op combobox when using mouse wheel or keyboard

1) In KisCompositeOpComboBox::selectCompositeOp() we shouldn't reselect
   the same composite op all the time. Composite ops are not unique in
   the list (they are duplicated in favourite category), therefore
   such reselection may break the order.

2) keyPressEvent() and wheelEvent() should skip category items. Otherwise
   it would fallback to "Normal" blending mode.

3) KisSortedCategorizedListModel::indexOf() should search for the element
   in the order of the sorted model, not the original one. Obviously,
   we should first select from "Favourite" category.

BUG:410312